Version Next

    - Fix bug in FileStreamRepository when filename is less than 3 characters

Version 1.0.964 Released January 28, 2015

    - Make @FieldBuilder.ProvidesField search in super-types for annotated methods
    - Fixed bug in MethodAnnotationScanner that allowed duplicate methods
    - Added FieldLayout, BlobField, and StringValuePropertyDef
    - Upgraded several library dependencies

Version 1.0.946 Released November 12, 2014

    - Added HTTP request and response parameters to ExceptionLoggingFilter methods
      NOTE: the above are backward-incompatible changes
    - Added PersistentObject support for JTA/XA transactions
    - Fixed bug causing class-level @RetryTransaction annotations to not be found
    - Refactor POBJ Synchronizer to allow subclass to implement own merge algorithm
    - Added ObjectComparator

Version 1.0.925 Released September 16, 2014

    - Added JPASchemaGeneratorTask and HibernateDDLFormatterTask ant tasks
    - Rewrote PersistentObjectTransactionManager as a Spring PlatformTransactionManager;
      removed obsolete @PersistentObjectTransactional and associated AOP aspect
    - Removed arcane @ThreadConfigurable and @ThreadTransactional nobody was using
      NOTE: the above are backward-incompatible changes
    - Added PersistentConnection and PersistentSocketConnection
    - Added IdleTimeoutInputStream.checkConnection()
    - Update to Spring 4.0.x

Version 1.0.905 Released July 29, 2014

    - Improvements relating to serialization and HTTP sessions with Vaadin 7
    - Changed VaadinConfigurable.ifSessionNotLocked default to EXCEPTION
    - Fixed VaadinUtil.invokeLater() to run immediately from background
    - Revert previous change to VaadinUtil.invokeLater() (issue #19)
    - Fix bug in Primitive.FLOAT and Primitive.LONG parse pattern
    - Added ParseContext.tryPattern(), equals(), and hashCode()
    - Added Primitive.forName()

Version 1.0.882 Released May 6, 2014
